# Aegis-Scheduler

./: .gitignore  Cargo.toml  README.md
Aegis Core/: Cargo.toml
Aegis Core/src/: db.rs  executor.rs  job.rs  main.rs  queue.rs  resources.rs
